--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "com.incredulous.twitch",
-  "version": "1.1.0",
+  "name": "io.incredulous.twitch",
+  "version": "2.0.0-pre",
   "displayName": "Twitch IRC for Unity",
   "description": "A lightweight Twitch.tv IRC client for Unity."
 }
